Improvements to the installation process.

--- a/src/Views/leads/failure.twig
+++ b/src/Views/leads/failure.twig
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h1>Lead creation failed!</h1>
+    <h1>Lead creation failed! {{ message }}</h1>
     <a href="/leads" class="btn btn-primary">Create Another Lead</a>
 </div>
 </body>
